Add /nick reset <name> for mods to reset the nickname of another player.